refactor: The principle name and claims of the personal access token are set as the information of the creator